--- a/css/layout.css
+++ b/css/layout.css
@@ -236,7 +236,7 @@ body {
 }
 
 /* Responsive adjustments */
-@media (max-width: 375px) {
+@media (max-width: 430px) {
     .game-header {
         padding: 3px 6px;
     }
@@ -267,7 +267,7 @@ body {
     .game-board {
         padding: 0;
         justify-content: flex-start;
-        margin-top: 2px;
+        margin-top: 0;
     }
 
     .towers-container {
